@@ -6,7 +6,7 @@ FileManager.savedfile=Saved to {0}
 
 
 SQLPanelAPI.untitledLabel=Unspecified
-SQLPanelAPI.unsavedchanges=There are unsaved changes in file:\n {0} \n Save them now?
+SQLPanelAPI.unsavedchanges=There are unsaved changes in file:\n{0}\nSave them now?
 SQLPanelAPI.unsavedchangestitle=Unsaved Changes - {0}
 
 SQLPanelAPI.nofileToRelaod=No file to reload
